stardew-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-stardew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-api
        image: <USERNAME_DOCKER_KAMU>/stardew-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        # INI ADALAH IDENTITY INJECTION
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP # Tipe service wajib ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-stardew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-ui
        image: <USERNAME_DOCKER_KAMU>/stardew-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP # Tipe service wajib ClusterIP
